# ai-test-generator-playwright

./: .env.example  .gitignore  pyproject.toml  readme.md
.github/workflows/: e2e-tests.yml
demo-app/: package-lock.json
demo-app/app/dashboard/: page.tsx
demo-app/app/login/: page.tsx
demo-app/app/settings/: page.tsx
output_tests/: login_empty_username.spec.ts  login_valid.spec.ts  settings_display_name_no_change_shows_saved.spec.ts  settings_update_display_name_empty_validation.spec.ts  settings_update_display_name_success.spec.ts
playwright_runner/: package-lock.json  package.json  playwright.config.ts
playwright_runner/tests/: login_empty_password.spec.ts  login_invalid.spec.ts
sample_inputs/: user_stories.md
src/ai_test_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llmtg/: cli.py  config.py
src/llmtg/generator/: playwright_writer.py  validator.py
src/llmtg/llm/: client.py  prompts.py  schema.py
